--- a/Assignment/index.html
+++ b/Assignment/index.html
@@ -20,5 +20,9 @@
     </div>
     <div><button><a href="https://v2.jokeapi.dev/joke/Programming">Joke API</a></button></div>
     
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="js/index.js"></script>
+    
+
 </body>
 </html>
