Setup and delivery now visible for end user.

--- a/Assignment/index.html
+++ b/Assignment/index.html
@@ -23,8 +23,11 @@
         </span>
     </div>
 
+    <div id="cardbodySetup"></div>
+    <div id="cardbodyDelivery"></div>
+
+    <div><button onclick="tellJoke()">Another Joke</button></div>
     <div><button class="apiButton"><a href="https://v2.jokeapi.dev/joke/Programming">Joke API</a></button></div>
-    <div><button><a href="https://v2.jokeapi.dev/joke/Programming">Joke API</a></button></div>
     
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="js/index.js"></script>
