Removed some unused/redundant CSS, all validated.

--- a/Assignment/index.html
+++ b/Assignment/index.html
@@ -26,7 +26,7 @@
         </div>
     
 
-        <div class="jokeBox">
+        <div>
             <h1>The Joke Page</h1>
             <hr class="solid">
             <div class="card">
