Added fourth menu button and changed names.

--- a/Assignment/index.html
+++ b/Assignment/index.html
@@ -18,9 +18,10 @@
             <div class="dropdown">
                 <button onclick="myFunction()" class="dropbtn">Menu <i class="fa-solid fa-bars size-xlarge"></i></button>
                 <div id="myDropdown" class="dropdown-content">
-                    <a href="#" class="button buttonPrimary">Link 1</a>
-                    <a href="#" class="button buttonPrimary">Link 2</a>
-                    <a href="#" class="button buttonPrimary">Link 3</a>
+                    <a href="#" class="button buttonPrimary">These</a>
+                    <a href="#" class="button buttonPrimary">Buttons</a>
+                    <a href="#" class="button buttonPrimary">Don't Do</a>
+                    <a href="#" class="button buttonPrimary">Anything!</a>
                 </div>
             </div>
         </div>
